<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestInAppBilling" >

    <Spinner
        android:id="@+id/static_product_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/purchase_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/static_product_spinner"
        android:text="@string/purchase" />

    <Button
        android:id="@+id/consume_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/static_product_spinner"
        android:layout_alignParentRight="true"
        android:text="@string/consume" />

    <Spinner
        android:id="@+id/product_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/purchase_static" />

    <Button
        android:id="@+id/purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_spinner"
        android:layout_alignLeft="@+id/product_spinner"
        android:text="@string/purchase" />
    
    <Button
        android:id="@+id/consume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_spinner"
        android:layout_alignParentRight="true"
        android:text="@string/consume" />

    <ListView
        android:id="@+id/purchased_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3" >
    </ListView>

    <Button
        android:id="@+id/get_sku_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/purchase"
        android:layout_below="@+id/purchase"
        android:layout_marginTop="14dp"
        android:text="@string/get_sku_details" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/get_sku_details"
        android:layout_below="@+id/get_sku_details"
        android:layout_marginTop="14dp"
        android:text="@string/purchased_list" />

</RelativeLayout>